minor text improvement

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
 
-  <h1>Welcme to the InstaBudget</h1>
+  <h1>Welcme to InstaBudget</h1>
   <h2>This is the homepage of the
   <a href="http://cur.lv/v6gkd">InstaBudget</a>
   </h2>
