--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -3,7 +3,7 @@
 <p>Hi <%= @user.name %>,</p>
 
 <p>
-Thank you for signing on for InstaBudget! You have done something good for your
+Thank you for signing up for InstaBudget! You have done something good for your
 self today! Click on the link below to activate your account:
 </p>
 
